--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-
 body {
     display: flex;
     padding-top: 40px;
@@ -15,6 +14,10 @@ body {
     align-items: flex-start;
     background-color: #121212;
     color: #fff;
+}
+
+h1{
+padding-bottom: 20px;
 }
 
 section {
@@ -51,6 +54,7 @@ section {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    /*max-width: 1200px;*/
 }
 
 .gallery-item {
@@ -63,3 +67,13 @@ section {
     border: 1px solid #fff;
     /*background-color: #fff ;*/
 }
+
+/*
+.gallery-item:hover{
+    background-size: cover;
+    width: 300px;
+    min-height: 300px;
+
+    margin-bottom: 50px;
+}
+*/
